# langgraph-agent-book

./: .env.sample  .gitignore  README.md  pyproject.toml
chapter1/: 1.1 OpenAI 임베딩.ipynb  1.2 OpenAI 임베딩 유사도 검색.ipynb  1.3 Upstage 임베딩.ipynb
chapter2/: 2.1 LLM 답변 생성.ipynb  2.10 경량 모델(sLM) 전환 및 활용 방법.ipynb  2.11 LangChain 없이 RAG 파이프라인 구현.ipynb  2.12 Pinecone을 활용한 RAG 파이프라인 구축.ipynb  2.2 ChatOllama.ipynb  2.3 ChatOllama 프롬프트 구체화.ipynb  2.4 ChatHuggingFace.ipynb  2.5 ChatHuggingFace 양자화.ipynb  2.6 Chroma를 활용한 RAG 파이프라인 구축.ipynb  2.7 데이터 전처리 후 RAG 파이프라인 구축.ipynb  2.8 분할정복.ipynb  2.9 LCEL.ipynb
chapter3/: 3.1 LangGraph로 구현하는 워크플로.ipynb  3.2 LangGraph로 구현하는 에이전트.ipynb  3.3 py-zerox를 활용한 데이터 전처리.ipynb  3.4 소득세법 에이전트.ipynb  3.5 Agent Orchestration을 위한 슈퍼바이저.ipynb  3.6 MCP를 활용한 에이전트 구현.ipynb  house_tax_agent.py  mcp_server.py
chapter4/: 4.1 Evaluation을 위한 Dataset 생성.ipynb  4.2 LLM Judge를 활용한 Evaluation.ipynb
documents/: law.docx
part1/: 2-1 OpenAI Embedding.ipynb  2-2 Measuring Vector Similarity Using the OpenAI Embedding Model.ipynb  2-2 Vector Similarity.ipynb  2-3 Vectorizing with the Upstage Embedding Model.ipynb  3-1 OpenAI 임베딩.ipynb  3-1 Vectorization with OpenAI Embedding Model.ipynb.ipynb  3-2 OpenAI Embedding Similarity Search.ipynb  3-2 OpenAI 임베딩 모델을 활용한 벡터의 유사도 측정.ipynb  3-3 Upstage 임베딩.ipynb
part2/: 10 Building a RAG Pipeline with Pinecone.ipynb  10 Chroma를 활용한 RAG 파이프라인 구축.ipynb  10 Pinecone.ipynb  11 RAG Pipeline with Data Processing.ipynb  11 데이터 전처리 후 RAG 파이프라인 구축.ipynb  12-1 분할정복.ipynb  12-2 LCEL.ipynb  13 경량 모델(sLM) 전환 및 활용 방법.ipynb  14 How to Build a RAG Pipeline without LangChain.ipynb  15 How to Build a RAG Pipeline with Pinecone.ipynb  4 ChatOpenAI.ipynb  5-1 ChatOllama.ipynb  5-1 Generating Responses with ChatOllama.ipynb  5-2 Improving ChatOllama.ipynb  5-3 ChatHuggingFace.ipynb  5-3 Generating Responses with ChatHuggingFace.ipynb  (+16 more)
(+23 files in other folders)
