[project]
name = "langgraph-agent-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "numpy>=2.3.5",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
