[project]
name = "langgraph-agent-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "docx2txt>=0.9",
    "fastmcp>=2.13.1",
    "ipykernel>=7.1.0",
    "langchain>=1.0.7",
    "langchain-anthropic>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.1",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.0.3",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.13",
    "langchain-text-splitters>=1.0.0",
    "langgraph>=1.0.3",
    "langsmith>=0.4.43",
    "numpy>=2.3.5",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.1",
]
